# des-desktop

./: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tokoku.db  vue.config.js
public/: index.html
src/: App.vue  main.js  router.js
src-tauri/: .dockerignore  .env.example  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/des-macros/: Cargo.toml
src-tauri/des-macros/src/: lib.rs
src-tauri/migrations/2021-02-22-130714_create_users/: up.sql
src-tauri/migrations/2021-02-22-131640_create_items/: down.sql  up.sql
src-tauri/src/: build.rs  crypto.rs  db.rs  error.rs  forecast_util.rs  macros.rs  main.rs  models.rs  result.rs  schema.rs  sqlutil.rs
src-tauri/src/dao/: item_dao.rs  mod.rs  sale_dao.rs  user_dao.rs
src-tauri/src/service/: auth.rs  error.rs  forecast.rs  item.rs  mod.rs  sales.rs  user.rs
src/assets/: app.scss
src/components/: Autocomplete.vue  Sidebar.vue  UiTable.vue  chart.js  lineChart.js
src/components/modals/: AddItem.vue  AddSale.vue  AddUser.vue  EditItem.vue  EditSale.vue  EditUser.vue
src/plugins/: api_plugin.js  ui_plugin.js
src/plugins/api/: auth.js  index.js  item.js  sales.js  user.js
src/screen/: Admin.vue  Home.vue  Item.vue  Login.vue  Predict.vue  Sales.vue
